# failsafe

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  tokio-console
.github/workflows/: docker-build.yml  rust_ci.yml
src/: activity.rs  event.rs  guild.rs  main.rs  store.rs  time.rs  util.rs
src/command/: lfg.rs  macros.rs  mod.rs  ping.rs
src/command/lfg/: create.rs  delete.rs  edit.rs  join.rs  kick.rs  leave.rs  mod.rs  opts.rs  show.rs
src/command/lfg/opts/: mod.rs  time.rs
src/embed/: channel.rs  fixed.rs  mod.rs
src/event/: alert.rs  embed.rs  mod.rs
