[package]
name = "failsafe"
version = "0.1.0"
authors = ["Bryan Henry <bryanhenry522@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.5"
command_attr = "0.3"
derivative = "2.2"
dotenv = "0.15"
dtparse = "1.2"
enum-iterator = "0.6"
fs2="0.4"
futures = "0.3"
itertools = "0.10"
lazy_static = "1.4"
paste = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
tokio = { version = "1.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
static_assertions = "1.1"

[dev-dependencies]
tempdir = "0.3"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "collector", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api"]
# Temporarily build from current branch until PRs are released in new version
#version = "0.10.8"
git = "https://github.com/sbrocket/serenity.git"
rev = "e7ba5bf211d20ff3b37613973e9553c5682b0894"
