[package]
name = "failsafe"
version = "0.10.0"
authors = ["Bryan Henry <bryanhenry522@gmail.com>"]
edition = "2018"

[features]
tokio-console = ["console-subscriber", "tracing-subscriber/registry"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.5"
command_attr = "0.3"
derivative = "2.2"
dotenv = "0.15"
enum-iterator = "0.7"
fs2 = "0.4"
futures = "0.3"
itertools = "0.10"
lazy_static = "1.4"
paste = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
static_assertions = "1.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
tempdir = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }
parking_lot = "0.11"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "collector", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api"]
version = "0.10.9"

[dependencies.console-subscriber]
optional = true
# console-subscriber is not yet published to crates.io, pin to a specific git revision
git = "https://github.com/tokio-rs/console"
rev = "52601b847780bb21e00cbac698f60de995dcc1d1"
