[package]
name = "failsafe"
version = "1.1.0"
authors = ["Bryan Henry <bryanhenry522@gmail.com>"]
edition = "2021"

[features]
tokio-console = ["console-subscriber", "tokio/tracing"]

[dependencies]
anyhow = "1.0"
chrono = "0.4.20"
chrono-tz = "0.5"
command_attr = "0.3"
derivative = "2.2"
dotenv = "0.15"
enum-iterator = "0.7"
fs2 = "0.4"
futures = "0.3"
itertools = "0.10"
lazy_static = "1.4"
paste = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
static_assertions = "1.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_matches = "1.5"
parking_lot = "0.11"
tempdir = "0.3"
# TODO: Once Rust v1.56 and [env] is released, add default RUST_LOG value to .cargo/config.toml
test-env-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1", features = ["full", "test-util"] }

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "collector", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api"]
version = "0.10.9"

[dependencies.console-subscriber]
optional = true
version = "0.1"
